--- a/gdproject/export_presets.cfg
+++ b/gdproject/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="credits.md"
 exclude_filter=""
-export_path="bin/windows/whosagoodboy_windows.zip"
+export_path="../bin/windows/whosagoodboy.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="credits.md"
 exclude_filter=""
-export_path="bin/linux/whosagoodboy_linux.zip"
+export_path="../bin/linux/whosagoodboy/whosagoodboy.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="credits.md"
 exclude_filter=""
-export_path="../bin/pico/whosagoodboy_pico.apk"
+export_path="../bin/pico/whosagoodboy-pico.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -328,7 +328,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="credits.md"
 exclude_filter=""
-export_path="bin/quest/whosagoodboy_meta_quest.apk"
+export_path="../bin/quest/whosagoodboy-meta-quest.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
